# soma

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-package.yml
docker/mastodon/: Dockerfile  mastodon_api.json
docs/: messages.md
soma/: logging_config.py
soma/agents/: event_subscriber.py  github_mail_agent.py  logging_agent.py
soma/connectors/: base.py  email_connector.py  mastodon_connector.py
soma/core/: agent_registry.py  message.py  policy_manager.py  registry.py
soma/core/contracts/: agent.py  event_bus.py  health.py  message.py  policy.py
soma/core/governance/: policy_store.py
soma/eventbus/: base.py  kafka_bus.py  memory_bus.py  metrics.py
soma/examples/devteam/: agents.yml
soma/monitoring/: server.py
soma/registry/: agent_registry.py
soma/runtime/: agent_loader.py  ingest.py
tests/fixtures/config/: agents.yml  connectors.yml  policies.yml
tests/fixtures/emails_preload/user1@localhost/INBOX/: testmail.eml
tests/fixtures/emails_preload/user2@localhost/INBOX/: a5baa50.eml  ci_activity-2.eml
tests/integration/: test_agent_loader.py  test_email.py  test_event_bus.py  test_mastodon_api.py
tests/unit/connectors/: test_base_connector.py
tests/unit/core/: test_registry.py
